5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1807_2572.log
== SUBMITION (2019-06-14 02:56:25) 
-- CODE:
from numpy import*

x=array(eval(input())
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0

for k in range(size(x)):
	if(x[k]%2!=0):
		y[u]=x[k]
		u+=1
print(y)
-- EXECUTION TIME:
0.801559
-- ERROR:
  File "/home/codebench/codes/1807/2572/main.py", line 4
    a=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 02:56:28) 
-- CODE:
from numpy import*

x=array(eval(input())
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0

for k in range(size(x)):
	if(x[k]%2!=0):
		y[u]=x[k]
		u+=1
print(y)
-- ERROR:
File "XXXX", line 4
    a=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-14 02:56:41) 
-- CODE:
from numpy import*
x=array(eval(input()))
a=0
b=0
for i in range(size(x)):
	if(x[i]%2==1):
		b+=1

y=zeros(b,dtype=int)

u=0

for k in range(size(x)):
	if(x[k]%2!=0):
		y[u]=x[k]
		u+=1
print(y)
-- EXECUTION TIME:
0.994975
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
